# wikisoft

./: .gitignore  CLAUDE.md  README.md
WIKISOFT4/: .gitignore  README.md  pyproject.toml
WIKISOFT4/api/v4/: main.py
WIKISOFT4/api/v4/middleware/: audit.py  auth.py  rate_limit.py
WIKISOFT4/api/v4/routes/: auto_validate.py  compat.py  validation.py
WIKISOFT4/core/: __init__.py
WIKISOFT4/core/agent/: confidence.py  tool_registry.py
WIKISOFT4/core/ai/: dynamic_questions.py  matcher.py
WIKISOFT4/core/memory/: case_store.py  persistence.py
WIKISOFT4/core/privacy/: __init__.py  detector.py  masker.py
WIKISOFT4/core/security/: __init__.py  audit.py  config.py
WIKISOFT4/core/validators/: __init__.py  validation_layer1.py  validation_layer2.py
WIKISOFT4/frontend/: .env.development  Dockerfile  package-lock.json
WIKISOFT4/frontend/src/: App.css  App.tsx  ChatBot.css  ChatBot.tsx  ValidationResults.css  api.ts  types.ts
WIKISOFT4/frontend/src/components/: ErrorBoundary.tsx  FloatingChat.tsx  ThemeToggle.css
WIKISOFT4/frontend/src/hooks/: useValidationErrors.ts
WIKISOFT4/frontend/src/utils/: download.ts
WIKISOFT4/integrations/: __init__.py
WIKISOFT4/integrations/n8n/: __init__.py
WIKISOFT4/integrations/temporal/: __init__.py
WIKISOFT4/integrations/webhook/: __init__.py  events.py
WIKISOFT4/tests/: __init__.py  test_core.py
WIKISOFT4/training_data/: layer1_error_20260103_012639.json  layer1_error_20260103_070352.json  layer1_error_20260103_070621.json  layer1_error_20260103_071330.json
WIKISOFT4/training_data/cases/: index.json
(+511 files in other folders)
